--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,10 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@latest
+      uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@latest
+      uses: actions/setup-go@v5
       with:
         go-version: '1.20'
 
